--- a/tex/modules/1-E/index.tex
+++ b/tex/modules/1-E/index.tex
@@ -4,8 +4,25 @@
 \input{modules/1-E/readiness/outcomes.tex}
 \input{modules/1-E/readiness/resources.tex}
 
-\input{modules/1-E/sections/0.tex}
-\input{modules/1-E/sections/1.tex}
-\input{modules/1-E/sections/2.tex}
+%\input{modules/1-E/sections/0.tex}
+%\input{modules/1-E/sections/1.tex}
+%\input{modules/1-E/sections/2.tex}
+
+\CatchFileDef{\activities}{modules/1-E/activities.tex}{}
+
+\begin{applicationActivities}
+
+\newModuleSection
+\includeActivities{1}{10}{\activities}
+
+\newModuleSection
+\includeActivities{11}{20}{\activities}
+
+\newModuleSection
+\includeActivities{21}{30}{\activities}
+
+
+\end{applicationActivities}
+
 
 \end{module}
