--- a/tex/tbil-la.sty
+++ b/tex/tbil-la.sty
@@ -1,4 +1,4 @@
-\usepackage{enumerate,amssymb,tikz,amsmath,amsthm,multicol,hyperref,environ,etoolbox,graphicx}
+\usepackage{enumerate,amssymb,tikz,amsmath,amsthm,multicol,hyperref,environ,etoolbox,graphicx,catchfile}
 \usetikzlibrary{arrows.meta}
 
 \usepackage{accents}
