--- a/tex/handouts/1-E/handout-E-1.tex
+++ b/tex/handouts/1-E/handout-E-1.tex
@@ -2,10 +2,12 @@
 
 \usepackage{course-notes}
 \usepackage{handouts/course-notes-handouts}
+\CatchFileDef{\activities}{modules/1-E/activities.tex}{}
 
 \begin{document}
 \begin{module}{E}{Solving Systems of Linear Equations}
-\setcounter{SectionCounter}{1}
-\input{modules/1-E/sections/1.tex}
+\setcounter{SectionCounter}{0}
+\newModuleSection
+\includeActivities{11}{20}{\activities}
 \end{module}
 \end{document}
