--- a/tex/handouts/1-E/handout-E-2.tex
+++ b/tex/handouts/1-E/handout-E-2.tex
@@ -2,10 +2,12 @@
 
 \usepackage{course-notes}
 \usepackage{handouts/course-notes-handouts}
+\CatchFileDef{\activities}{modules/1-E/activities.tex}{}
 
 \begin{document}
 \begin{module}{E}{Solving Systems of Linear Equations}
-\setcounter{SectionCounter}{2}
-\input{modules/1-E/sections/2.tex}
+\setcounter{SectionCounter}{1}
+\newModuleSection
+\includeActivities{21}{30}{\activities}
 \end{module}
 \end{document}
