--- a/tex/handouts/2-V/handout-V-0.tex
+++ b/tex/handouts/2-V/handout-V-0.tex
@@ -2,10 +2,12 @@
 
 \usepackage{course-notes}
 \usepackage{handouts/course-notes-handouts}
+\CatchFileDef{\activities}{modules/2-V/activities.tex}
 
 \begin{document}
 \begin{module}{V}{Vector Spaces}
-\setcounter{SectionCounter}{0}
-\input{modules/2-V/sections/0.tex}
+\setcounter{SectionCounter}{-1}
+\newModuleSection
+\includeActivities{1}{5}{\activities}
 \end{module}
 \end{document}
