--- a/tex/handouts/2-V/handout-V-3.tex
+++ b/tex/handouts/2-V/handout-V-3.tex
@@ -2,10 +2,11 @@
 
 \usepackage{course-notes}
 \usepackage{handouts/course-notes-handouts}
-
+\CatchFileDef{\activities}{modules/2-V/activities.tex}{}
 \begin{document}
 \begin{module}{V}{Vector Spaces}
-\setcounter{SectionCounter}{3}
-\input{modules/2-V/sections/3.tex}
+\setcounter{SectionCounter}{2}
+\newModuleSection
+\includeActivities{25}{34}{\activities}
 \end{module}
 \end{document}
