--- a/tex/handouts/2-V/handout-V-4.tex
+++ b/tex/handouts/2-V/handout-V-4.tex
@@ -2,10 +2,13 @@
 
 \usepackage{course-notes}
 \usepackage{handouts/course-notes-handouts}
+\CatchFileDef{\activities}{modules/2-V/activities.tex}{}
+
 
 \begin{document}
 \begin{module}{V}{Vector Spaces}
-\setcounter{SectionCounter}{4}
-\input{modules/2-V/sections/4.tex}
+\setcounter{SectionCounter}{3}
+\newModuleSection
+\includeActivities{35}{42}{\activities}
 \end{module}
 \end{document}
