--- a/tex/modules/1-E/activities.tex
+++ b/tex/modules/1-E/activities.tex
@@ -196,7 +196,6 @@ Its \term{solution set} is given by
 \end{observation}
 
 
-%\begin{applicationActivities}
 
 
 
@@ -248,7 +247,7 @@ Its \term{solution set} is given by
 \end{definition}
 
 \begin{example}
-  The corresopnding augmented matrix for this system is obtained by
+  The corresponding augmented matrix for this system is obtained by
   simply writing the coefficients and constants in matrix form.
 
   \begin{multicols}{2}
@@ -482,7 +481,6 @@ matrices to solve other problems.
 
 
 
-%\begin{applicationActivities}
 
 
 \begin{activity}{10}
