--- a/tex/modules/1-E/index.tex
+++ b/tex/modules/1-E/index.tex
@@ -4,14 +4,12 @@
 \input{modules/1-E/readiness/outcomes.tex}
 \input{modules/1-E/readiness/resources.tex}
 
-%\input{modules/1-E/sections/0.tex}
-%\input{modules/1-E/sections/1.tex}
-%\input{modules/1-E/sections/2.tex}
 
 \CatchFileDef{\activities}{modules/1-E/activities.tex}{}
 
 \begin{applicationActivities}
 
+\setcounter{SectionCounter}{-1}
 \newModuleSection
 \includeActivities{1}{10}{\activities}
 
