--- a/tex/modules/2-V/index.tex
+++ b/tex/modules/2-V/index.tex
@@ -4,13 +4,32 @@
 \input{modules/2-V/readiness/outcomes.tex}
 \input{modules/2-V/readiness/resources.tex}
 
-\input{modules/2-V/sections/0.tex}
-\input{modules/2-V/sections/1.tex}
-\input{modules/2-V/sections/2.tex}
-\input{modules/2-V/sections/3.tex}
-\input{modules/2-V/sections/4.tex}
-\input{modules/2-V/sections/5.tex}
-\input{modules/2-V/sections/6.tex}
-\input{modules/2-V/sections/7.tex}
+
+\CatchFileDef{\activities}{modules/2-V/activities.tex}
+
+\setcounter{SectionCounter}{-1}
+\newModuleSection
+\includeActivities{1}{5}{\activities}
+
+\newModuleSection
+\includeActivities{6}{16}{\activities}
+
+\newModuleSection
+\includeActivities{17}{24}{\activities}
+
+\newModuleSection
+\includeActivities{25}{34}{\activities}
+
+\newModuleSection
+\includeActivities{35}{42}{\activities}
+
+\newModuleSection
+\includeActivities{43}{54}{\activities}
+
+\newModuleSection
+\includeActivities{55}{65}{\activities}
+
+\newModuleSection
+\includeActivities{66}{80}{\activities}
 
 \end{module}
