--- a/tex/modules/6-G/index.tex
+++ b/tex/modules/6-G/index.tex
@@ -4,9 +4,18 @@
 \input{modules/6-G/readiness/outcomes.tex}
 \input{modules/6-G/readiness/resources.tex}
 
-\stepcounter{SectionCounter}
-\input{modules/6-G/sections/1.tex}
-\input{modules/6-G/sections/2.tex}
-\input{modules/6-G/sections/3.tex}
+
+
+\CatchFileDef{\activities}{modules/6-G/activities.tex}
+
+\newModuleSection
+\includeActivities{1}{16}{\activities}
+
+\newModuleSection
+\includeActivities{17}{38}{\activities}
+
+\newModuleSection
+\includeActivities{39}{51}{\activities}
+
 
 \end{module}
