--- a/tex/modules/7-P/index.tex
+++ b/tex/modules/7-P/index.tex
@@ -1,9 +1,15 @@
 \begin{module}{P}{Applications of Linear Algebra}
 
-\stepcounter{SectionCounter}
+\newModuleSection
 \input{modules/7-P/sections/1.tex}
+
+\newModuleSection
 \input{modules/7-P/sections/2.tex}
+
+\newModuleSection
 \input{modules/7-P/sections/3.tex}
+
+\newModuleSection
 \input{modules/7-P/sections/4.tex}
 
 \end{module}
