--- a/tex/handouts/2-V/handout-V-1.tex
+++ b/tex/handouts/2-V/handout-V-1.tex
@@ -2,10 +2,14 @@
 
 \usepackage{course-notes}
 \usepackage{handouts/course-notes-handouts}
+\CatchFileDef{\activities}{modules/2-V/activities.tex}{}
 
 \begin{document}
 \begin{module}{V}{Vector Spaces}
-\setcounter{SectionCounter}{1}
-\input{modules/2-V/sections/1.tex}
+\setcounter{SectionCounter}{0}
+
+\newModuleSection
+\includeActivities{6}{16}{\activities}
+
 \end{module}
 \end{document}
