--- a/tex/handouts/2-V/handout-V-2.tex
+++ b/tex/handouts/2-V/handout-V-2.tex
@@ -2,10 +2,11 @@
 
 \usepackage{course-notes}
 \usepackage{handouts/course-notes-handouts}
-
+\CatchFileDef{\activities}{modules/2-V/activities.tex}{}
 \begin{document}
 \begin{module}{V}{Vector Spaces}
-\setcounter{SectionCounter}{2}
-\input{modules/2-V/sections/2.tex}
+\setcounter{SectionCounter}{1}
+\newModuleSection
+\includeActivities{17}{24}{\activities}
 \end{module}
 \end{document}
