--- a/tex/handouts/4-A/handout-A-1.tex
+++ b/tex/handouts/4-A/handout-A-1.tex
@@ -2,10 +2,13 @@
 
 \usepackage{course-notes}
 \usepackage{handouts/course-notes-handouts}
-
+\CatchFileDef{\activities}{modules/4-A/activities.tex}{}
 \begin{document}
 \begin{module}{A}{Algebraic properites of linear maps}
-\setcounter{SectionCounter}{1}
-\input{modules/4-A/sections/1.tex}
+\setcounter{SectionCounter}{0}
+\newModuleSection
+\includeActivities{1}{11}{\activities}
+
+
 \end{module}
 \end{document}
