--- a/tex/modules/4-A/index.tex
+++ b/tex/modules/4-A/index.tex
@@ -3,10 +3,20 @@
 \input{modules/4-A/standards.tex}
 \input{modules/4-A/readiness/outcomes.tex}
 
-\stepcounter{SectionCounter}
-\input{modules/4-A/sections/1.tex}
-\input{modules/4-A/sections/2.tex}
-\input{modules/4-A/sections/3.tex}
-\input{modules/4-A/sections/4.tex}
+
+\CatchFileDef{\activities}{modules/4-A/activities.tex}
+
+\newModuleSection
+\includeActivities{1}{11}{\activities}
+
+\newModuleSection
+\includeActivities{12}{24}{\activities}
+
+\newModuleSection
+\includeActivities{25}{42}{\activities}
+
+\newModuleSection
+\includeActivities{43}{59}{\activities}
+
 
 \end{module}
