--- a/tex/facilitator-notes.tex
+++ b/tex/facilitator-notes.tex
@@ -10,9 +10,9 @@
 
 \subsection*{Introduction}
 
-These notes are for a one semester, 3-hour sophomore-level Linear Algebra course.  Teams should have at minimum 5 people to ensure a sufficiently sized team factoring in absences.  Each team should be provided with a vertical, ideally non-permanent surface for their work, such as a whiteboard or chalkboard.  A vertical surface encourages collaboration and discussion, and discourages individual work on paper.  These notes have been field-tested at a large regional public university in classes with 10-35 students, with each ``part'' designed to fill one 50-60 minute class period.  The notes (formatted as slides) are also distributed to the students for use during class and for review purposes; thus, there are ``facts'', ``definitions'', and ``observations'' sprinkled in for reference use, but the bulk of class time is spent on the application activities.  Each application activity has an estimated time listed with it; these add up to 50-60 minutes per day.
+These notes are for a one semester, 3-hour sophomore-level Linear Algebra course.  Teams should have at minimum 5 people to ensure a sufficiently sized team factoring in absences.  Each team should be provided with a vertical, ideally non-permanent surface for their work, such as a whiteboard or chalkboard.  A vertical surface encourages collaboration and discussion, and discourages individual work on paper.  These notes have been field-tested at a large regional public university in classes with 10-35 students, with each ``section'' designed to fill one 50-60 minute class period.  The notes (formatted as slides) are also distributed to the students for use during class and for review purposes; thus, there are ``facts'', ``definitions'', and ``observations'' sprinkled in for reference use, but the bulk of class time is spent on the application activities.  Each application activity has an estimated time listed with it; these add up to 50-60 minutes per day.
 
-The course consists of 5 modules, listed below, as well as a few extra days of applied activities (called Module P). The activities are split into sections optimized for 27 75-minute class days with 60 minutes each day devoted to application activity, and the remaining 15 minutes for assessment.  Should the instructor need or desire a different structuring, this can be achieved by modifying tex/modules/*/index.tex for the appropriate module.
+The course consists of 5 modules, listed below, as well as a few extra days of applied activities (called Module P). The activities are split into sections optimized for 27 75-minute class days with 60 minutes each day devoted to application activity, and the remaining 15 minutes for assessment.  
 
 \subsubsection*{Module Listing}
 \begin{enumerate}
@@ -24,7 +24,7 @@ The course consists of 5 modules, listed below, as well as a few extra days of a
 \end{enumerate}
 
 \subsection*{Module E: Systems of Linear Equations}
-This module explores how to solve arbitrarily large systems of linear equations.  We emphasize how to write the solution set using set-builder notation, and introduce the students to CoCalc (using the Octave kernel) to perform computation.  The choice of Octave here is somewhat arbitrary but motivated by request of our engineering faculty, who use Matlab; instructors are encouraged to adapt the materials to use the technology best suited to their instructional context.  
+This module explores how to solve arbitrarily large systems of linear equations.  We emphasize how to write the solution set using set-builder notation, and introduce the students to using Octave (a free language quasi-equivalent to Matlab) to perform computation.  The choice of Octave here is somewhat arbitrary but motivated by request of our engineering faculty, who use Matlab; instructors are encouraged to adapt the materials to use the technology best suited to their instructional context.  
 
 RAT answers (IF-AT card B002, 1-10):
 \begin{multicols}{10}
@@ -42,19 +42,19 @@ RAT answers (IF-AT card B002, 1-10):
 \end{enumerate}
 \end{multicols}
 
-\subsubsection*{Part 0}
-This is a half day, as the first RAT typically only takes a half hour, leaving a half of a class period.  After introducing some notation, we begin by exploring systems of two equations in two variables, which students learn how to solve (using e.g. back-substitution) in high school algebra.  We quickly move on to infinite solution sets with activity E.0.8 and begin introducing students to set-builder notation.
+\subsubsection*{Section 0}
+This is a half day, as the first RAT typically only takes a half hour, leaving a half of a class period.  After introducing some notation, we begin by exploring systems of two equations in two variables, which students learn how to solve (using e.g. back-substitution) in high school algebra.  We quickly move on to infinite solution sets with activity E.8 and begin introducing students to set-builder notation.
 
 
-\subsubsection*{Part 1}
-We begin this part by quickly introducing augmented matrix notation.  We then begin building fluency in this new language through activity E.1.5; here, the instructor is advised to encourage students to think about what the matrix operation means for the corresponding system of equations.  We list 10 minutes for team's working on this activity, but we often spend another 5 minutes in intra-team discussion as well.  E.1.7 introduces the students to the Gauss-Jordan algorithm; rather than belabor this in class, we provide extra videos and emphasize to students that this particular skill is to be learned and practiced in the individual space.  This allows us to go ahead and begin using technology in the next part.
+\subsubsection*{Section 1}
+We begin this section by quickly introducing augmented matrix notation.  We then begin building fluency in this new language through activity E.15; here, the instructor is advised to encourage students to think about what the matrix operation means for the corresponding system of equations.  We list 10 minutes for team's working on this activity, but we often spend another 5 minutes in intra-team discussion as well.  E.17 and E.18 introduce the students to the Gauss-Jordan algorithm; rather than belabor this in class, we provide extra videos and emphasize to students that this particular skill is to be learned and practiced in the individual space.  This allows us to go ahead and begin using technology in the next part.
 
-\subsubsection*{Part 2}
-This part begins getting students familiar with an online computational environment emulating Matlab (we note that other instructional contexts may call for different choices in technology).  After getting the technology running and using it to solve a couple systems with no or one solution, we then explore the difference between free and bound variables in Activity E.2.6.
+\subsubsection*{Section 2}
+This section begins getting students familiar with an online computational environment emulating Matlab (we note that other instructional contexts may call for different choices in technology).  After getting the technology running and using it to solve a couple systems with no or one solution, we then explore the difference between free and bound variables in Activity E.26.
 
 
 \subsection*{Module V: Introduction to vector spaces}
-This module introduces students to abstract vector spaces.  After a motivating activity in part 0, we define vector spaces in part 1, characterizing them as ``things that act like Euclidean spaces''.  The notion of linear combinations and span are introduced and explored through parts 2 and 3, frequently working with vector spaces such as polynomials and matrices after initial examples about Euclidean spaces.  Part 4 introduces the important notion of a subspace.  Part 5 introduces linear independence, and Part 6 introduces the definition of a basis.  The final section ties a lot of these ideas together and explores how to efficiently describe a subspace by computing a basis.
+This module introduces students to abstract vector spaces.  After a motivating activity in section 0, we define vector spaces in part 1, characterizing them as ``things that act like Euclidean spaces''.  The notion of linear combinations and span are introduced and explored through parts 2 and 3, frequently working with vector spaces such as polynomials and matrices after initial examples about Euclidean spaces.  Section 4 introduces the important notion of a subspace.  Part 5 introduces linear independence, and Part 6 introduces the definition of a basis.  The final section ties a lot of these ideas together and explores how to efficiently describe a subspace by computing a basis.
 
 RAT answers (IF-AT card B002, 11-20):
 \begin{multicols}{10}
@@ -73,33 +73,32 @@ RAT answers (IF-AT card B002, 11-20):
 \end{enumerate}
 \end{multicols}
 
-\subsubsection*{Part 0}
-This is a half day, as the first RAT typically only takes a half hour, leaving a half of a class period.  This part is devoted to a single, longer activity exploring what properties Euclidean spaces all have in common
+\subsubsection*{Section 0}
+This is a half day, as the first RAT typically only takes a half hour, leaving a half of a class period.  This section is devoted to a single, longer activity exploring what properties Euclidean spaces all have in common
 
-\subsubsection*{Part 1}
-The definition of a vector space is introduced here, as anything satisfying the 8 properties identified in Part 0 as applying to all Euclidean spaces.  The use of $\bf{z}$ for an additive identity element is very intentional here, as students are often misled by symbols resembling $0$.  We quickly highlight this in the first example in Activity 1.3, wherein the additive identity is the pair $(0,1)$.  After working with the defintition of a vector space, we introduce the notion of span, and explore the idea geometrically in $\mathbb{R}^2$
+\subsubsection*{Section 1}
+The definition of a vector space is introduced here, as anything satisfying the 8 properties identified in Section 0 as applying to all Euclidean spaces.  The use of $\bf{z}$ for an additive identity element is very intentional here, as students are often misled by symbols resembling $0$.  We quickly highlight this in the first example in Activity V.9, wherein the additive identity is the pair $(0,1)$.  After working with the defintition of a vector space, we introduce the notion of span, and explore the idea geometrically in $\mathbb{R}^2$
 
-\subsubsection*{Part 2}
-Building on students' geometric intuition of span from the previous part, we begin by exploring how to algebraically answer questions about span by solving systems of equations.  Students often have trouble writing down the matrices in 2.6 and 2.7, often wanting to write the transpose, or somehow concatenating matrices in 2.7; instructors are advised to emphasize the parallels with how Euclidean vectors translate into matrices.
+\subsubsection*{Section 2}
+Building on students' geometric intuition of span from the previous section, we begin by exploring how to algebraically answer questions about span by solving systems of equations.  Students often have trouble writing down the matrices in V.22 and V.23, often wanting to write the transpose, or somehow concatenating matrices in V.23; instructors are advised to emphasize the parallels with how Euclidean vectors translate into matrices.
 
-\subsubsection*{Part 3}
-We continue our exploration of span by addressing the question of when a set of vectors spans the entire vector space.  We hint at the notion of dimension in the first two activities, which is introduced rigorously in Part 6.  In addition to asking these questions about Euclidean vectors, we also include activities again on polynomials and matrices, emphasizing the natural isomorphism to Euclidean space (in as many words).  
+\subsubsection*{Section 3}
+We continue our exploration of span by addressing the question of when a set of vectors spans the entire vector space.  We hint at the notion of dimension in the first two activities, which is introduced rigorously in Section 6.  In addition to asking these questions about Euclidean vectors, we also include activities again on polynomials and matrices, emphasizing the natural isomorphism to Euclidean space (in as many words).  
 
-\subsubsection*{Part 4}
+\subsubsection*{Section 4}
 This section introduces subspaces, typically a very tricky concept for students.  Several examples are presented as activities with decreasing amounts of scaffolding.
 
-\subsubsection*{Part 5}
-This section introduces the notion of linear independence, motivated by trying to describe a subspace as efficiently as possible.  Students explore how to test for linear independence in 5.3.  Activities 5.9-5.11 presage the notion of dimension.  
+\subsubsection*{Section 5}
+This section introduces the notion of linear independence, motivated by trying to describe a subspace as efficiently as possible.  Students explore how to test for linear independence in V.45.  Activities V.52-54 presage the notion of dimension.  
 
-\subsubsection*{Part 6}
-This part introduces students to the vocabulary to go along with their intuition developed in Part 5, namely the definition of a basis.  Activity 6.10 gives some students trouble, as they are tempted to insert the polynomials into a matrix as rows rather than columns.  The instructor is advised to use the reporting phase to draw students' attention to the parallels with the previous activity; in most classes, at least one team will have made this observation and just needs a small prompt to explain to the rest of the class.  
+\subsubsection*{Section 6}
+This section introduces students to the vocabulary to go along with their intuition developed in Section 5, namely the definition of a basis.  Activity V.64 gives some students trouble, as they are tempted to insert the polynomials into a matrix as rows rather than columns.  The instructor is advised to use the reporting phase to draw students' attention to the parallels with the previous activity; in most classes, at least one team will have made this observation and just needs a small prompt to explain to the rest of the class.  
 
-\subsubsection*{Part 7}
-This section ties the previous two together by illuminating to students that the answer to the question of ``How can we efficiently describe a subspace'' is to compute a basis.  Activity 7.2 is meant to highlight that (nontrivial) subspaces have (infinitely) many bases.  Instructors are advised to comment when discussing Fact 7.4 that a simple argument on the size of a matrix shows that two bases of a finite dimensional vector space have the same size.  We then give students the definition of dimension, and point out how it matches their geometric intuition.  Activity 7.12 walks students through computing a basis of the solution space of a homogeneous system of equations; this arises naturally in Module A (in computing the kernel of a linear transformation) and in Module G (in computing an eigenspace).  Activities 7.15 and 7.16 usually elicit a lively inter-team discussion, as students' understanding of linear independence and span is still in a formative stage at this point.
-
+\subsubsection*{Section 7}
+This section ties the previous two together by illuminating to students that the answer to the question of ``How can we efficiently describe a subspace'' is to compute a basis.  Activity V.66 is meant to highlight that (nontrivial) subspaces have (infinitely) many bases.  Instructors are advised to comment when discussing Fact V.68 that a simple argument on the size of a matrix shows that two bases of a finite dimensional vector space have the same size.  We then give students the definition of dimension, and point out how it matches their geometric intuition.  Activities V.73 and V.74 usually elicit a lively inter-team discussion, as students' understanding of linear independence and span is still in a formative stage at this point.  Activity V.78 walks students through computing a basis of the solution space of a homogeneous system of equations; this arises naturally in Module A (in computing the kernel of a linear transformation) and in Module G (in computing an eigenspace).  
 
 \subsection*{Module A: Algebraic properties of linear maps}
-This module introduces the fundamental notion of a linear transformation, and studies them from an algebraic perspective.   Part 1 is entirely devoted to allowing students to grapple with the definition.  In section 2, students discover how a linear map is completely determined by its action on a basis, and we introduce the (nonstandard) definition of a standard matrix.  Parts 3 and 4 are devoted to exploring the notions of injectivity and surjectivity.
+This module introduces the fundamental notion of a linear transformation, and studies them from an algebraic perspective.   Section 1 is entirely devoted to allowing students to grapple with the definition.  In section 2, students discover how a linear map is completely determined by its action on a basis, and we introduce the (nonstandard) definition of a standard matrix.  Parts 3 and 4 are devoted to exploring the notions of injectivity and surjectivity.
 
 RAT answers (IF-AT card B002, 21-30):
 \begin{multicols}{10}
@@ -117,17 +116,17 @@ RAT answers (IF-AT card B002, 21-30):
 \item A
 \end{enumerate}
 \end{multicols}
-\subsubsection*{Part 1}
-Many students at this level have great difficulty understanding how to show statements involving arbitrary objects; for this reason, in 1.3 we begin by walking through an explicit example of showing a map is a linear transformation.  Instructors whose students have completed an introduction to proofs course could likely omit this.  
+\subsubsection*{Section 1}
+Many students at this level have great difficulty understanding how to show statements involving arbitrary objects; for this reason, in A.3 we begin by walking through an explicit example of showing a map is a linear transformation.  Instructors whose students have completed an introduction to proofs course could likely omit this.  
 
-\subsubsection*{Part 2}
-Part 2 is devoted to allowing students to discover the standard matrix.  Activity 2.5 usually generates a good discussion on the differences between (b) and (c).  
+\subsubsection*{Section 2}
+Section 2 is devoted to allowing students to discover the standard matrix.  Activity A.16 usually generates a good discussion.  
 
-\subsubsection*{Part 3}
-This section introduces students to the notions of injectivity and surjectivity.  The scaffolding in activities 3.2-3.6 is crucial (as we have found out the hard way).  Some teams will try to make observation 3.7 on their own in the course of these activities.  The notions of kernel and image are then introduced, and students discover that they already know how to compute them.
+\subsubsection*{Section 3}
+This section introduces students to the notions of injectivity and surjectivity.  The scaffolding in activities A.26-A.28 is crucial (as we have found out the hard way).  Some teams will try to make observation A.33  on their own in the course of these activities.  
 
-\subsubsection*{Part 4}
-This section is devoted to a deeper study of injectivity and surjectivity.  Activity 4.6 is the crucial activity here; instructors must be sure to allot at least 15 minutes for the teams to sort the statements, and likely 5-10 minutes for reporting and discussion.  We often facilitate reporting on this activity by (after students have sorted the statements into two lists on their whiteboards) asking which statements were easiest to sort; the answer is typically A and F.  Teams will almost always have paired B-E and C-D together, which is our next point of discussion; finally, we move to the most difficult, G and H.  Many classes will deduce Fact 4.10 on their own during the discussion of Activities 4.8 and 4.9.  Activity 4.11 serves as a good barometer of where teams are at.  Teams keeping up with everything will, when presented with only Part 1, deduce all 3 parts in about a minute; teams that are lagging in their understanding will need closer to 5 minutes for all three parts.  When discussing Activity 4.12, instructors are advised to point out how we will use property (c) in the next module to construct inverse maps.  Some classes, due to extended discussion on Activity 4.6, do not have time for Activities 4.14-4.17; we advise instructors that it is more important to spend the time on 4.6.
+\subsubsection*{Section 4}
+This section is devoted to a deeper study of injectivity and surjectivity.  Activity A.48 is the crucial activity here; instructors must be sure to allot at least 15 minutes for the teams to sort the statements, and likely 5-10 minutes for reporting and discussion.  We often facilitate reporting on this activity by (after students have sorted the statements into two lists on their whiteboards) asking which statements were easiest to sort; the answer is typically A and F.  Teams will almost always have paired B-E and C-D together, which is our next point of discussion; finally, we move to the most difficult, G and H.  Many classes will deduce Fact A.52 on their own during the discussion of Activities A.50 and A.51.  Activity A.53 serves as a good barometer of where teams are at.  Teams keeping up with everything will, when presented with only part 1, deduce all 3 sections in about a minute; teams that are lagging in their understanding will need closer to 5 minutes for all three parts.  When discussing Activity A.54, instructors are advised to point out how we will use property (c) in the next module to construct inverse maps.  Some classes, due to extended discussion on Activity A.48, do not have time for Activities A.56-A.59; we advise instructors that it is more important to spend the time on A.48.
 
 \subsection*{Module 5-M: Algebraic structure of matrices}
 This module introduces students to matrix multiplication and invertible matrices, motivated through the lens of linear transformations.  Many students at this level have seen matrix multiplication in an algorithmic sense (i.e. compute the dot product of rows with columns); while in the past we mentioned this technique, we now avoid this in favor of emphasizing that the raison d'\^{e}tre of matrix multiplication is the composition of linear transformations.  This change in approach led to a doubling in student success on their first assessment of matrix multiplication.
@@ -151,18 +150,18 @@ RAT answers (IF-AT card B002, 31-40):
 \end{multicols}
 
 
-\subsubsection*{Part 1}
-This section develops matrix multiplication as the standard matrix corresponding to the composition of two linear transformations.  The readiness assurance process is crucial here to make sure students can proceed through Activities 1.1-1.4.  Activity 1.4 is carefully  scaffolded to encourage students to view matrix multiplication as taking appropriate linear combinations of columns. 
+\subsubsection*{Section 1}
+This section develops matrix multiplication as the standard matrix corresponding to the composition of two linear transformations.  The readiness assurance process is crucial here to make sure students can proceed through Activities M.1-M.4.  Activity M.4 is carefully  scaffolded to encourage students to view matrix multiplication as taking appropriate linear combinations of columns. 
 
-\subsubsection*{Part 2}
-Activity 2.2 ideally belongs with part 1, but there is rarely time for it.  The bulk of this part is devoted to students' discovering that row operations can be viewed as matrix multiplication.  This will be crucial in Module G in developing geometric intuition for the determinant.  
+\subsubsection*{Section 2}
+Activity M.9 ideally belongs with section 1, but there is rarely time for it.  The bulk of this part is devoted to students' discovering that row operations can be viewed as matrix multiplication.  This will be crucial in Module G in developing geometric intuition for the determinant.  
 
-\subsubsection*{Part 3}
-This part is devoted to the notion of invertibility.  Activity 3.1 is a callback to Activity A.4.6 and A.4.12.  After students compile their lists, we recommend asking them to circle the 3 that were easiest to categorize to help facilitate the inter-team discussion.   After the definition of invertibility, Activity 3.3 shows students that they already know how to compute the standard matrix of the inverse map.  Some students will view Activity 3.8 as a ``cruel trick'' after doing a needless calculation for part 1; we find the ``Aha!'' moment as students discover they did needless work invaluable in cementing the notion of an inverse map as ``undoing'' the original map.
+\subsubsection*{Section 3}
+This section is devoted to the notion of invertibility.  Activity M.16 is a callback to Activity A.48 and A.54.  After students compile their lists, we recommend asking them to circle the 3 that were easiest to categorize to help facilitate the inter-team discussion.   After the definition of invertibility, Activity M.18 shows students that they already know how to compute the standard matrix of the inverse map.  Some students will view Activity M.23 as a ``cruel trick'' after doing a needless calculation for part 1; we find the ``Aha!'' moment as students discover they did needless work invaluable in cementing the notion of an inverse map as ``undoing'' the original map.
 
 \subsection*{Module G: Geometric properties of linear maps}
 
-This module explores the geometric properties of linear transformations, focusing on determinants, eigenvalues, and eigenvectors.  The readiness assurance outcomes include some basic high school geometry and algebra, as well as some outcomes of earlier modules concerning the algebraic properties of linear transformations.  The first two days are devoted to determinants, while the next two explore eigenvalues and eigenvectors.  The last day focuses on on a popular application of eigenvectors, namely Google's PageRank algorithm.
+This module explores the geometric properties of linear transformations, focusing on determinants, eigenvalues, and eigenvectors.  The readiness assurance outcomes include some basic high school geometry and algebra, as well as some outcomes of earlier modules concerning the algebraic properties of linear transformations.  The first two days are devoted to determinants, while the third explores eigenvalues and eigenvectors.  Instructors with available time are highly encouraged to follow this up with the Google Page Rank application activities.
 
 RAT answers (IF-AT card B002, 41-50):
 \begin{multicols}{10}
@@ -181,19 +180,14 @@ RAT answers (IF-AT card B002, 41-50):
 \end{enumerate}
 \end{multicols}
 
-\subsubsection*{Part 1}
-The goal of this day is to get students to understand that a determinant is measuring how area/volume changes under a linear transformation.  Activities 25.1 through 25.6 require the students to make a specific construction of a graph and the resulting area transformation.  Students sometimes have a little trouble with the first of these, but then make short work of the remainder, requiring little class wide discussion.  Activity 25.10 invites the first incorrect responses after simultaneous reporting; the instructor is advised to emphasize the multiplicative nature of the stretching factor here.  Activity 25.11 can be made a little more concrete by distributing parallelograms and triangles cut out of card stock that invite the students to see the equality geometrically.  Activity 25.16 sometimes invites teams to settle on the incorrect answer choice of 7; once again, the instructor is advised to emphasize that the stretching factors (determinants) are multiplicative.
+\subsubsection*{Section 1}
+The goal of this day is to get students to understand that a determinant is measuring how area/volume changes under a linear transformation.  Activities G.1 through G.9 require the students to make a specific construction of a graph and the resulting area transformation.  Students sometimes have a little trouble with the first of these, but then make short work of the remainder, requiring little class wide discussion.  Activity G.8 invites the first incorrect responses after simultaneous reporting; the instructor is advised to emphasize the multiplicative nature of the stretching factor here.  Activity G.9 can be made a little more concrete by distributing parallelograms and triangles cut out of card stock that invite the students to see the equality geometrically.  Activity G.15 sometimes invites teams to settle on the incorrect answer choice of 7; once again, the instructor is advised to emphasize that the stretching factors (determinants) are multiplicative.
 
-\subsubsection*{Part 2}
-The goal of this day is to help students understand how to actually compute a determinant.  Activity 26.4 gives one straightforward but tedious method to motivate the search for better techniques.  Activity 26.6 begins an inquiry towards Laplace expansion.  Activities 26.8 through 26.11 are carefully scaffolded to guide students toward understanding how linearity of the determinant leads to Laplace expansion.  In practice, students will find a mixture of row operations and Laplace expansion the most efficient way to actually perform the computations.
+\subsubsection*{Section 2}
+The goal of this day is to help students understand how to actually compute a determinant.   Activity G.27 begins an inquiry towards Laplace expansion.  Activities G.27 through G.33 are carefully scaffolded to guide students toward understanding how linearity of the determinant leads to Laplace expansion.  In practice, students will find a mixture of row operations and Laplace expansion the most efficient way to actually perform the computations.
 
-\subsubsection*{Part 3}
-The focus now shifts towards eigenvalues and eigenvectors.  Activity 27.8 can be a little tedious for students still learning determinants.  Activities 27.9 and 27.11 should be done one part at a time, levelling the class between parts.
+\subsubsection*{Section 3}
+The focus now shifts towards eigenvalues and eigenvectors.  Activity G.46 can be a little tedious for students still learning determinants.  
 
-\subsubsection*{Part 4}
-This day is oriented towards an understanding of geometric multiplicity.  Activity 28.2 is a quick observation about complex eigenvalues (a situation that arises frequently in computer graphics applications).   Activity 28.5 and 28.6 give two examples with the same characteristic polynomial, but different geometric multiplicities for the eigenvalue $2$.  Activity 28.10 is reflective of how they might use these skills in subsequent courses, taking full advantage of technology to perform the tedious calculations.  Depending on their comfort level, students may need to be guided through how to use their preferred technology to compute determinants and solve systems of equations.
-
-\subsubsection*{Part 5}
-This sequence of activities is ideal for the last day of the semester.  The goal is to use what students have learned about eigenvalues and eigenvectors to explain the basics behind Google's PageRank algorithm (the \$700,000,000,000 references Google's market cap as of this writing).  In activity 29.1, students should use whatever reasoning they like to decide on a ranking; many will choose 4 or 7 as the most important.  Activity 29.5 emphasizes how this is an application of what has been learned the last two class days.  Activity 29.6 asks them to compute a very simple example, while activity 29.8 returns to the example from 29.1, showing that webpage 2 is actually most important by this metric.
 
 \end{document}
