Finish sectioning refactoring

--- a/tex/course-notes.tex
+++ b/tex/course-notes.tex
@@ -4,12 +4,7 @@
 
 \begin{document}
 
-\input{modules/0-I/index.tex}
-\input{modules/1-E/index.tex}
-\input{modules/2-V/index.tex}
-\input{modules/4-A/index.tex}
-\input{modules/5-M/index.tex}
-\input{modules/6-G/index.tex}
-\input{modules/7-P/index.tex}
+\input{index.tex}
+
 
 \end{document}
