--- a/tex/course-slides.tex
+++ b/tex/course-slides.tex
@@ -8,45 +8,7 @@
 \titlepage
 \end{frame}
 
-\input{modules/0-I/index.tex}
-
-\begin{module}{E}{Solving Systems of Linear Equations}
-\input{modules/1-E/standards.tex}
-\input{modules/1-E/readiness/outcomes.tex}
-\input{modules/1-E/readiness/resources.tex}
-\input{modules/1-E/activities.tex}
-\end{module}
-
-\begin{module}{V}{Vector Spaces}
-\input{modules/2-V/standards.tex}
-\input{modules/2-V/readiness/outcomes.tex}
-\input{modules/2-V/readiness/resources.tex}
-\input{modules/2-V/activities.tex}
-\end{module}
-
-\begin{module}{A}{Algebraic Properties of Linear Maps}
-\input{modules/4-A/standards.tex}
-\input{modules/4-A/readiness/outcomes.tex}
-\input{modules/4-A/activities.tex}
-\end{module}
-
-\begin{module}{M}{Understanding Matrices Algebraically}
-\input{modules/5-M/standards.tex}
-\input{modules/5-M/readiness/outcomes.tex}
-\input{modules/5-M/readiness/resources.tex}
-\input{modules/5-M/activities.tex}
-\end{module}
-
-\begin{module}{G}{Geometry of Linear Maps}
-\input{modules/6-G/standards.tex}
-\input{modules/6-G/readiness/outcomes.tex}
-\input{modules/6-G/readiness/resources.tex}
-\input{modules/6-G/activities.tex}
-\end{module}
-
-
-\input{modules/7-P/index.tex}
-
+\input{index.tex}
 
 
 \end{document}
