Add goals and summary environments

--- a/tex/course-slides.sty
+++ b/tex/course-slides.sty
@@ -200,6 +200,20 @@
   \BODY
 }
 
+\NewEnviron{goals}{
+  \begin{frame}
+  \textbf{Today's goals:}
+  \BODY
+  \end{frame}
+}
+
+\NewEnviron{summary}{
+  \begin{frame}
+  \textbf{Summary:}
+  \BODY
+  \end{frame}
+}
+
 \NewEnviron{instructorNote}{}
 
 \newcommand{\smallSlideText}{\small}
