--- a/tex/modules/4-A/activities.tex
+++ b/tex/modules/4-A/activities.tex
@@ -36,7 +36,7 @@ Given a linear transformation \(T:V\to W\),
     \draw (0,-2) -- (0,2);
     \draw[thick,-latex,red] (0,0) -- (-1.5,1)
           node[anchor=south east] {\(T(\vect v)\)};
-    \node[anchor=west] at (0,-1) {codomain \(\IR^2\)};
+    \node[anchor=west] at (0,-1) {co-domain \(\IR^2\)};
   \end{scope}
 \end{tikzpicture}
 \end{center}
