Fix error in Activity V7

--- a/tex/modules/2-V/activities.tex
+++ b/tex/modules/2-V/activities.tex
@@ -103,9 +103,9 @@ The space of \term{\(m \times n\) matrices}
       &=
     (a+b\mathbf{i})+((c+d\mathbf{i})+(e+f\mathbf{i}))
       \\&=
-    a+b+c+d\mathbf{i}+e\mathbf{i}+f\mathbf{i}
-      \\&=
-    ((a+b\mathbf{i})+(c+d\mathbf{i}))+(e+f\mathbf{i})
+    (a+b\mathbf{i})+((c+e)+(d+f)\mathbf{i})
+	\\&=(a+c+e)+(b+d+f)\mathbf{i}
+    \\&=((a+c)+(b+d)\mathbf{i})+(e+f\mathbf{i})
       \\&=
     (\vec u+\vec v)+\vec w
   \end{align*}
