--- a/tex/modules/4-A/readiness/outcomes.tex
+++ b/tex/modules/4-A/readiness/outcomes.tex
@@ -1,7 +1,7 @@
 \begin{readinessAssuranceOutcomes}
-\item State the definition of a spanning set, and determine if a set of Euclidean vectors spans \(\IR^n\) \listOfStandards{V4}.
-\item State the definition of linear independence, and determine if a set of Euclidean vectors is linearly dependent or independent \listOfStandards{S1}.
-\item State the definition of a basis, and determine if a set of Euclidean vectors is a basis \listOfStandards{S2,S3}.
+\item State the definition of a spanning set, and determine if a set of Euclidean vectors spans \(\IR^n\) \listOfStandards{V3}.
+\item State the definition of linear independence, and determine if a set of Euclidean vectors is linearly dependent or independent \listOfStandards{V5}.
+\item State the definition of a basis, and determine if a set of Euclidean vectors is a basis \listOfStandards{V6,V7}.
 \item Find a basis of the solution space to a homogeneous system
-of linear equations \listOfStandards{S6}.
+of linear equations \listOfStandards{V10}.
 \end{readinessAssuranceOutcomes}
