--- a/tex/modules/4-A/activities.tex
+++ b/tex/modules/4-A/activities.tex
@@ -929,6 +929,7 @@ Let $T: \IR^2 \rightarrow \IR^3$ be given by
     \text{with standard matrix }
   \begin{bmatrix} 1 & 0 \\ 0 & 1 \\ 0 & 0 \end{bmatrix}
 \]
+Is \(T\) injective?
 \begin{enumerate}[a)]
 \item Yes, because \(T(\vec v)=T(\vec w)\) whenever \(\vec v=\vec w\).
 \item Yes, because \(T(\vec v)\not=T(\vec w)\) whenever \(\vec v\not=\vec w\).
@@ -1343,7 +1344,7 @@ injective and surjective (we call such maps \term{bijective}).
 How many pivot rows must \(A\) have?
 \end{subactivity}
 \begin{subactivity}
- How many columns must \(A\) have?
+ How many pivot columns must \(A\) have?
 \end{subactivity}
 \begin{subactivity}
 What is \(A\)?
