--- a/tex/modules/4-A/activities.tex
+++ b/tex/modules/4-A/activities.tex
@@ -209,8 +209,8 @@ for any one of the following.
 Otherwise, \(L\) can be shown to be linear by proving the following in general.
 
 \begin{itemize}
-\item For all \(\vec v,\vec w\in V\), \(L(\vec v+\vec w)\not=L(\vec v)+L(\vec w)\).
-\item For all \(\vec v\in V\) and \(c\in \IR\), \(L(c\vec v)\not=cL(\vec v)\).
+\item For all \(\vec v,\vec w\in V\), \(L(\vec v+\vec w)=L(\vec v)+L(\vec w)\).
+\item For all \(\vec v\in V\) and \(c\in \IR\), \(L(c\vec v)=cL(\vec v)\).
 \end{itemize}
 
 Note the similarities between this process and showing that a subset of a vector
