Add answers to V1 exercises in exercise library

--- a/tex/modules/2-V/exercises/V1.tex
+++ b/tex/modules/2-V/exercises/V1.tex
@@ -10,6 +10,9 @@ c \odot x &= cx-3(c-1)
 \item Explain why \(V\) nonetheless isn't a vector space.
 \end{enumerate}
 \end{problem}
+\begin{solution}
+$V$ is not a vector space because scalar multiplication does not distribute over scalar addition.
+\end{solution}
 
 
 \begin{problem}{V1}
@@ -24,6 +27,9 @@ c \odot (x_1,x_2) &= (cx_1, cx_2)
 \item Explain why \(V\) nonetheless isn't a vector space.
 \end{enumerate}
 \end{problem}
+\begin{solution}
+$V$ is not a vector space because scalar multiplication does not distribute over vector addition.
+\end{solution}
 
 
 
@@ -39,6 +45,9 @@ c \odot (x_1,x_2) &= (cx_1, cx_2)
 \item Explain why \(V\) nonetheless isn't a vector space.
 \end{enumerate}
 \end{problem}
+\begin{solution}
+$V$ is not a vector space because scalar multiplication does not distribute over vector addition.
+\end{solution}
 
 \begin{problem}{V1}
 Let \(V\) be the set of all pairs of real numbers with the operations, for any \((x_1,x_2), (y_1,y_2) \in V\), \(c\in \IR\),
@@ -52,6 +61,9 @@ c \odot (x_1,x_2) &= (0, cx_2)
 \item Explain why \(V\) nonetheless isn't a vector space.
 \end{enumerate}
 \end{problem}
+\begin{solution}
+\(V\) is not a vector space because there is no multiplicative identity element.
+\end{solution}
 
 
 \begin{problem}{V1}
@@ -66,7 +78,10 @@ c \odot (x_1,x_2) &= (0, cx_2)
 \item Explain why \(V\) nonetheless isn't a vector space.
  \end{enumerate}
 \end{problem}
- 
+ \begin{solution}
+ \(V\) is not a vector space because scalar multiplication does not distribute over scalar addition.
+ \end{solution}
+
 \begin{problem}{V1}
  Let \(V\) be the set of all real numbers with the operations, for any \(x,y\in V\), \(c\in \IR\),
  \begin{align*}
@@ -79,6 +94,9 @@ c \odot (x_1,x_2) &= (0, cx_2)
 \item Explain why \(V\) nonetheless isn't a vector space.
  \end{enumerate}
 \end{problem}
+\begin{solution}
+\(V\) is not a vector space because scalar multiplication does not distribute over vector addition.
+\end{solution}
 
 \begin{problem}{V1}
  Let \(V\) be the set of all pairs of real numbers with the operations, for any \((x_1,x_2), (y_1,y_2) \in V\), \(c\in \IR\),
@@ -92,3 +110,6 @@ c \odot (x_1,x_2) &= (0, cx_2)
 \item Explain why \(V\) nonetheless isn't a vector space.
  \end{enumerate}
 \end{problem}
+\begin{solution}
+\(V\) is not a vector space because additive inverses do not always exist; for instance, \((0,0)\) does not have an additive inverse.
+\end{solution}
