question should be about RREF A

--- a/tex/modules/4-A/activities.tex
+++ b/tex/modules/4-A/activities.tex
@@ -1341,13 +1341,13 @@ Suppose \(T: \IR^n \rightarrow \IR^4\) with standard matrix
 \end{bmatrix}\) is both 
 injective and surjective (we call such maps \term{bijective}).
 \begin{subactivity}
-How many pivot rows must \(A\) have?
+How many pivot rows must \(\RREF A\) have?
 \end{subactivity}
 \begin{subactivity}
- How many pivot columns must \(A\) have?
+ How many pivot columns must \(\RREF A\) have?
 \end{subactivity}
 \begin{subactivity}
-What is \(A\)?
+What is \(\RREF A\)?
 \end{subactivity}
 \end{activity}
 
