--- a/tex/modules/2-V/activities.tex
+++ b/tex/modules/2-V/activities.tex
@@ -663,7 +663,7 @@ by doing the following:
 \end{remark}
 
 \begin{activity}{20}
-  Consider these subsets of \(\IR^4\):
+  Consider these subsets of \(\IR^3\):
   \[
     R=
     \setBuilder{ \begin{bmatrix}x\\y\\z\end{bmatrix}}{y=z+1}
@@ -1038,13 +1038,13 @@ the planar subspace.
 \end{observation}
 
 \begin{activity}{10}
-  Consider the subspace \(W=\vspan\left\{
+  Consider the subspace of \(\IR^4\) given by \(W=\vspan\left\{
   \begin{bmatrix}2\\3\\0\\1\end{bmatrix},
   \begin{bmatrix}2\\0\\1\\-1\end{bmatrix},
   \begin{bmatrix}2\\-3\\2\\-3\end{bmatrix},
   \begin{bmatrix}1\\5\\-1\\0\end{bmatrix}
   \right\}
-  \) of \(\IR^4\).
+  \).
 
   \begin{subactivity}
     Mark the part of \(\RREF\begin{bmatrix}
@@ -1112,7 +1112,7 @@ Let \(W\) be the subspace of \(\IR^4\) given by
  \begin{bmatrix} 2 \\ -1 \\ 1 \\ 2 \end{bmatrix},
  \begin{bmatrix} 4 \\ 5 \\ 3 \\ 0 \end{bmatrix},
  \begin{bmatrix} 3 \\ 2 \\ 2 \\ 1 \end{bmatrix}
- \right\} \]
+ \right\}. \]
  Find a basis for \(W\).
 \end{activity}
 
