--- a/tex/tbil-la.sty
+++ b/tex/tbil-la.sty
@@ -93,7 +93,7 @@
   \item \textbf{Scalar multiplication is associative:} \(a\odot(b\odot\vect v)=(ab)\odot\vect v\).
   \item \textbf{Scalar multiplication identity exists:} \(1\odot\vect v=\vect v\).
   \item \textbf{Scalar mult. distributes over vector addition:} \(a\odot(\vect u\oplus\vect v)=a\odot\vect u\oplus a\odot\vect v\).
-  \item \textbf{Scalar mult. distributes over scalar addition:} \((a+ b)\odot\vect v=a\vect v\oplus b\vect v\).
+  \item \textbf{Scalar mult. distributes over scalar addition:} \((a+ b)\odot\vect v=a\odot\vect v\oplus b\odot\vect v\).
 \end{itemize}
 \end{multicols}
 }
