--- a/tex/course-slides.sty
+++ b/tex/course-slides.sty
@@ -6,8 +6,8 @@
 %Center frame titles
 \setbeamertemplate{frametitle}[default][center]
 
-\title{Calculus II}
-%\author{Clontz \& Lewis}
+\title{Linear Algebra}
+\author{Clontz \& Lewis}
 
 \resetcounteronoverlays{SectionCounter}
 \resetcounteronoverlays{ActivityCounter}
