--- a/tex/modules/7-P/sections/2.tex
+++ b/tex/modules/7-P/sections/2.tex
@@ -129,7 +129,7 @@ This corresponds to the \term{page rank system}
   \frac{1}{2} x_1&& && &=& x_3
   \end{alignat*}
   \[
-    \begin{bmatrix}0&1&0\\\frac{1}{2}&0&\frac{1}{2}\\\frac{1}{2}&0&0\end{bmatrix}
+    \begin{bmatrix}0&1&0\\\frac{1}{2}&0 & 1\\\frac{1}{2}&0&0\end{bmatrix}
     \begin{bmatrix}x_1\\x_2\\x_3\end{bmatrix}
   =
     \begin{bmatrix}x_1\\x_2\\x_3\end{bmatrix}
