--- a/tex/modules/7-P/sections/3.tex
+++ b/tex/modules/7-P/sections/3.tex
@@ -192,7 +192,7 @@ direction) as \(\vec F_{AC}\).
 \begin{activity}{5}
 To write a linear system that models the truss under consideration
 with constant load \(10000\) newtons,
-how many variables will be required?
+how many scalar variables will be required?
 
 \drawtruss{}
 
