Add activity to V to address #90

--- a/tex/modules/2-V/activities.tex
+++ b/tex/modules/2-V/activities.tex
@@ -1471,4 +1471,13 @@ Find a basis for its solution space.
 \end{activity}
 
 
+\begin{activity}{5}
+Consider the homogeneous system of equations
+\begin{alignat*}{5}
+x_1&\,-\,&3x_2&\,+\,& 2x_3  &=& 0 \\
+2x_1&\,+\,&6x_2&\,+\,&4x_3  &=& 0 \\
+x_1&\,+\,&6x_2&\,-\,&4x_3 &=& 0 \\
+\end{alignat*}
 
+Find a basis for its solution space.
+\end{activity}
