Clean up G.27 to fix #93

--- a/tex/modules/6-G/activities.tex
+++ b/tex/modules/6-G/activities.tex
@@ -669,7 +669,7 @@ into the determinant of a smaller matrix.
 \begin{activity}{5}
   The following image illustrates the transformation of the unit cube
   by the matrix
-  $\begin{bmatrix} 3 & 1 & 0 \\  1 & 1 & 1 \\  0 & 0 & 1\end{bmatrix}$.
+  $\begin{bmatrix} 1 & 1 & 0 \\  1 & 3 & 1 \\  0 & 0 & 1\end{bmatrix}$.
 
   \begin{center}
   \begin{tikzpicture}
@@ -689,7 +689,7 @@ into the determinant of a smaller matrix.
   \draw[purple,thick,->] (0,0,0) -- (1,0,1)
     node[below]{\tiny$\begin{bmatrix} 1 \\ 1 \\ 0\end{bmatrix}$};
   \draw[purple,thick,->] (0,0,0) -- (3,0,1)
-    node[above right]{\tiny$\begin{bmatrix} 3 \\ 1 \\ 0\end{bmatrix}$};
+    node[above left]{\tiny$\begin{bmatrix} 1 \\ 3 \\ 0\end{bmatrix}$};
   \draw[purple,dashed,very thick] (0,0,0) -- node[left] {\tiny\(h=1\)} (0,1,0);
   \end{tikzpicture}
   \end{center}
@@ -698,10 +698,10 @@ into the determinant of a smaller matrix.
   So what must its volume be?
 \begin{multicols}{4}
 \begin{enumerate}[(a)]
-\item $\det \begin{bmatrix} 3 & 1 \\ 1 & 1 \end{bmatrix}$
-\item $\det \begin{bmatrix} 3 & 1 \\ 1 & 0 \end{bmatrix}$
-\item $\det \begin{bmatrix} 3 & 1 \\ 0 & 1 \end{bmatrix}$
+\item $\det \begin{bmatrix} 1 & 1 \\ 1 & 3 \end{bmatrix}$
+\item $\det \begin{bmatrix} 1 & 0 \\ 3 & 1 \end{bmatrix}$
 \item $\det \begin{bmatrix} 1 & 1 \\ 0 & 1 \end{bmatrix}$
+\item $\det \begin{bmatrix} 1 & 3 \\ 0 & 0 \end{bmatrix}$
 \end{enumerate}
 \end{multicols}
 \end{activity}
